--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -1,12 +1,37 @@
 ja:
   activerecord:
+    errors:
+      models:
+        user:
+          attributes:
+            email:
+              taken: "は既に使用されています。"
+              blank: "が入力されていません。"
+              invalid: "は有効でありません。"
+            password:
+              taken: "は既に使用されています。"
+              blank: "が入力されていません。"
+              too_short: "は%{count}文字以上に設定して下さい。"
+              too_long: "は%{count}文字以下に設定して下さい。"
+              invalid: "は英字と数字の両方を含めて設定してください。"
+              confirmation: "が内容とあっていません。"
+            nickname:
+              blank: "が入力されていません。"
+              too_long: "は%{count}文字以上に設定してください"
+              token: "はすでに使用されています"
+            encrypted_password:
+              blank: "が入力されていません"
+
     attributes:
       user:
+        nickname: "ニックネーム"
         current_password: "現在のパスワード"
+        name: 名前
         email: "メールアドレス"
         password: "パスワード"
         password_confirmation: "確認用パスワード"
-        remember_me: "ログインを記憶"
+        remember_me: "次回から自動的にログイン"
+        encrypted_password: "確認用パスワード"
     models:
       user: "ユーザ"
   devise:
