--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -21,6 +21,12 @@ ja:
               token: "はすでに使用されています"
             encrypted_password:
               blank: "が入力されていません"
+              password_confirmation: "パスワードと内容が一致しません"
+              confirmation: "パスワードが一致しません"
+            password_confirmation:
+              confirmation: "とパスワードが一致しません"
+
+
         
         photo:
           attributes:
