photoモデルのテストコードを記述

--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -32,6 +32,7 @@ ja:
           attributes:
             title:
               blank: "は必須です"
+              too_long: "は20字以内で登録してください。"
             image:
               blank: "は必須です"
 
